# g2o

./: .gitignore
doc/: g2o.pdf.xoj
g2o/apps/: CMakeLists.txt
g2o/apps/g2o_simulator/: CMakeLists.txt  simulator.cpp  simulator.h  test_simulator2d_multirob.cpp
g2o/apps/g2o_viewer/: CMakeLists.txt
g2o/core/: base_binary_edge.h  base_binary_edge.hpp  base_multi_edge.hpp  base_unary_edge.h  hyper_dijkstra.cpp  hyper_graph.cpp  hyper_graph_action.cpp  optimizable_graph.cpp  optimizable_graph.h  sparse_optimizer.cpp  sparse_optimizer.h
g2o/stuff/: misc.h
test/g2o_hello/: .cproject  .project  CMakeLists.txt
test/g2o_hello/data/: after_optimizer.g2o
test/g2o_hello/src/: main.cpp
